css/style.css
body {
  overflow: hidden;
}

.windows {
  min-width: 200px;
  min-height: 100px;
  position: absolute;
}

.system-bar {
  cursor: move;
}

.resize-icon {
  -ms-user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  cursor: se-resize;
  position: absolute;
  bottom: 0;
  right: 0;
  overflow: scroll;
}

.active {
  background: rgba(0, 0, 0, 0.24);
}

#currentApp {
  -ms-user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggler {
  margin-right: 17px;
}

#container {
  padding: 0px;
}

